--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,9 @@
 <IfModule mod_rewrite.c>
 
-   RewriteEngine On
+	RewriteEngine On
 
-   RewriteCond %{REQUEST_FILENAME}  -f [OR]
-   RewriteCond %{REQUEST_FILENAME} !-f
-   RewriteRule ^(.*)$ index.php [L,QSA]
+	RewriteCond %{REQUEST_FILENAME} !-d
+	RewriteCond %{REQUEST_FILENAME} !-f
+	RewriteRule ^(.*)$ index.php [L,QSA]
 
 </IfModule>
